@@ -11,7 +11,6 @@ version          = 1.1400
 travis_status = 1
 release_tests = 1
 github_user   = Perl5-Alien
-installer     = ModuleBuild
 irc           = irc://irc.perl.org/#native
 test2_v0      = 1
 
