@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Migrate to using Alien::Base::Wrapper
 
 1.1400    2017-09-14 17:05:21 -0400
   - Require Acme::Alien::DontPanic2 1.1400 (Alien::Build 1.14 Alien::Build::MB 0.05)
